fix overflow issue on long code blocks

--- a/src/templates/projectTemplate/projectTemplate.module.scss
+++ b/src/templates/projectTemplate/projectTemplate.module.scss
@@ -1,5 +1,6 @@
 .article {
   max-width: 70ch;
+  width: 100%;
   margin: 0 auto;
   padding: 0 1rem;
 
